--- a/CSS/stayl.css
+++ b/CSS/stayl.css
@@ -1,21 +1,29 @@
-  div {
-    border: 1px solid;
-    background-color: darkgrey;
+    header {
+    background: rgb(68, 68, 68);
+    height: 100px;
   }
-  header {
-    background: rgb(61, 61, 61);
-    height: 90px;
+  nav {
+    width: 960px;
+    margin: 0 auto;
   }
-  
   nav img {
     float: left;
     margin-top: 15px;
     margin-right: 30px;
   }
-  nav ul li{
-    list-style: none;
-    display: inline-block;
-    padding:10px;
+  nav li {
+    float: left;
     margin-top: 40px;
-    margin-right: 75px;
+    margin-right: 40px;
+    color: #bebebe;
   }
+  
+  main {
+    width: 960px;
+    margin: 0 auto;
+  }
+  div.img {
+    margin-top: 25px;
+  }
+  
+  
