--- a/CSS/stayl.css
+++ b/CSS/stayl.css
@@ -49,6 +49,9 @@ header {
     width: 400px;
     height: 400px;
   }
-
- 
+  footer {
+    margin-top: 25px;
+    background: rgb(68, 68, 68);
+    height: 80px;
+  }
 
