--- a/CSS/stayl.css
+++ b/CSS/stayl.css
@@ -1,65 +1,89 @@
-header {
-    background: rgb(68, 68, 68);
-    height: 100px;
-  }
-  nav {
-    width: 960px;
-    margin: 0 auto;
-  }
-  nav img {
-    float: left;
-    margin-top: 15px;
-    margin-right: 30px;
-  }
-  nav li {
-    float: left;
-    margin-top: 40px;
-    margin-right: 40px;
-    color: #bbbbbb;
-  }
-  
-  main {
-    width: 960px;
-    margin: 0 auto;
-  }
-  div img {
-      margin-top: 20px;
-  }
-  div.rihgt {
-    float: left;
-    margin-top: 20px;
-    width: 33.33%;
-  } 
-  div.center {
-    float: left;
-    margin-top: 20px;
-    width: 33.33%;
-  } 
-  div.left {
-    float: left;
-    margin-top: 20px;
-    width: 33.33%;
-  } 
-  div.imgp{
-     float: left; 
-    margin-top: 20px;
-  }
-  div.text{
-    float: left;
-    margin-left: 60px;
-    margin-top: 40px;
-    overflow: auto;
-    width: 400px;
-    height: 400px;
-  }
-  footer {
-    margin-top: 50px;
-    background: rgb(68, 68, 68);
-    height: 100px;
-  }
-  button{
-      margin-left: 55px;
-      background-color: black;
-      color:white
-  }
+body {
+  font-family: Helvetica;
+}
 
+header {
+  background: #444;
+  height: 100px;
+}
+
+nav {
+  width: 960px;
+  margin: 0px auto;
+}
+
+header img {
+  float: left;
+  margin-top: 15px;
+  margin-right: 30px;
+}
+
+header ul li {
+  display: inline-block;
+  margin-top: 40px;
+  margin-right: 75px;
+}
+
+a {
+  text-decoration: none;
+  color: #888;
+}
+
+main {
+  width: 960px;
+  margin: 30px auto;
+}
+
+main ul li {
+  list-style: none;
+  float: left;
+  margin: 30px 30px 30px 0px;
+}
+
+main ul li:last-child {
+  margin-right: 0px;
+}
+
+section img {
+  float: left;
+}
+
+section div {
+  width: 450px;
+  float: right;
+  margin-bottom: 30px;
+}
+
+h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+section div p {
+  height: 320px;
+  overflow: scroll;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 24px;
+}
+
+button {
+  border: none;
+  padding: 10px 30px;
+  background: #000;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 18px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: green;
+}
+
+footer {
+  clear: both;
+  background: #444;
+  height: 150px;
+}
